<resources>
    <string name="app_name">Esisalama</string>
    <string name="bvn">Bienvenue</string>
    <string name="txt_mail">Votre matricule</string>
    <string name="pasword_text">Votre mot de passe</string>
    <string name="se_connecter">se connecter</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="creer_un_compte_txt">Deuxième étape \n création du compte Étudiant</string>
    <string name="name">nom</string>
    <string name="postn">post-nom</string>
    <string name="prenom">prenom</string>
    <string name="num">numero de tel</string>
    <string name="confirmer_le_mot_de_passe">repeter le mot de passe</string>
    <string name="enregistre">Enregistre</string>
    <string name="my_count">j\'ai un compte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_lorem2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatumLorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum!</string>
    <string name="noti_channellid">channel_id</string>
    <string name="notif_channel_title">channel title</string>
    <string name="notif_channel_desc">channel description</string>
    <string name="shre_book_txt">Partager un Syllabus</string>
    <string name="importez_un_fichier_pdf">Importez un fichier pdf</string>
    <string name="syllabus_de">Syllabus de *</string>
    <string name="ex_logique">Ex: Logique</string>
    <string name="nom_du_prof">Nom du prof *</string>
    <string name="ex_jean_luc_kawel">Ex: jean luc kawel</string>
    <string name="description">Description *</string>
    <string name="fac">(facultatif)</string>
    <string name="publier">Publier</string>
    <string name="promotion">Promotion</string>
    <string name="my_name">Babi Mumba</string>
    <string name="fuction">Mobile Developer Full Stack</string>
    <string name="me">I\’m passionate new technologies \n and<b> mobile developer especially Android</b>  \n I\’m a fist year student at salama computer science school \n <b> [ESI SALAMA] </b></string>
    <string name="like_this_app">Si vous aimez cette application, n\'hésitez pas de la noter sur Play store, cela ne vous prendre pas plus d\'une minute. merci de votre soutien</string>
    <string name="feed_back">En cas de problème ou si vous avez des suggestions à me donner afin d’améliorer mon application ou d’ajouter d’autres fonctionnalités ; Laissez-moi votre commantaire en précisant votre problème ou suggestion. \n Contactez-moi sur les médias ci-haut Merci</string>

    <string name="kitabu_de">une application qui vous permet de lire et de télécharger tous vos livres preferer en format PDF</string>
    <string name="lien_app">https://play.google.com/store/apps/details?id=com.bstonetech.teste_kitabu</string>

    <string name="probleme_txt">Rediger votre probleme ici</string>
    <string name="school_name">Ecole Supérieure d\'Informatique Salama</string>
    <string name="school_sepa">Ecole Supérieure \nd\'Informatique Salama</string>
    <string name="app_version">Esis App 1.0.2</string>
    <string name="may_name">by <b>Babi Mumba</b> </string>
    <string name="studen_how_">Etudiant ayant supprimer leur compte</string>

    <!-- Google Admob teste -->
    <string name="app_id_teste">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id_teste">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Intertitial_id_teste">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_id_teste">ca-app-pub-3940256099942544/5354046379</string>
    <string name="teste_nativ_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="stp1">Première étape</string>
    <string name="add_or_select">Vous devez sélectionner ou ajouter votre compte d\'Esis</string>
    <string name="send_share">Télécharger des syllabus</string>
    <string name="rewarded_ad_reel">ca-app-pub-3940256099942544/5354046379</string>
    <string name="admin_count">Creation du compte \n Administrateur</string>
    <string name="salutation_user">Hey bonjour jean luc\nc\'est <b>Babi mumba</b></string>
    <string name="message_filan">Nous sommes en train de préparer une nouvelle mise à jour de notre application, et nous aimerions connaître votre avis. Nous souhaitons fournir une expérience utilisateur optimale et nous sommes à la recherche de vos suggestions pour améliorer l\'application.Si vous avez des idées sur les fonctionnalités à ajouter, les améliorations à apporter, ou tout autre conseil, Nous sommes ouverts à toute idée et serions ravis de discuter de vos suggestions avec vous. N\'hésitez pas à nous envoyer un message pour partager vos idées. Nous apprécions votre contribution et votre aide pour améliorer cette application. pour le moment la fonctionnalité chat n\'est pas prise en charge .Nous vous remercions de votre temps et de vos commentaires.</string>

</resources>