<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".Authentification.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/bvn"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="Connectez-vous pour continuer"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_10ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/input_mail"
            android:hint="@string/txt_mail"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/input_password"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionDone"
            android:hint="@string/pasword_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/btn_signin"
                android:text="@string/se_connecter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textAllCaps="false"
                android:background="@drawable/background_btn"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                />
            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:id="@+id/progressBar"
                />


        </FrameLayout>

        <TextView
            android:layout_gravity="end"
            android:id="@+id/create_new_compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/creer_un_compte"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            />

    </LinearLayout>

</ScrollView>