<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:background="@color/primary"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".Authentification.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/creer_un_compte_txt"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            />
        <FrameLayout
            android:layout_gravity="center"
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:id="@+id/image_profil"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                />
            <TextView
                android:id="@+id/txt_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Photo de profil"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/genre"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_16sdp"
            android:layout_gravity="center"
            android:paddingEnd="@dimen/_16sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Sexe"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/secondary_text"
                android:textStyle="bold" />



        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/nom"
            android:hint="@string/name"
            android:text="Kaisa"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/post_nom"
            android:hint="@string/postn"
            android:text="Mumba"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/prenom"
            android:hint="@string/prenom"
            android:text="babi"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/number"
            android:hint="@string/num"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:text="0987654321"
            android:inputType="number"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/input_mail"
            android:hint="@string/txt_mail"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:text="jbabi@gmail.com"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <RelativeLayout
            android:id="@+id/promotion_text"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_16sdp"
            android:layout_gravity="center"
            android:paddingEnd="@dimen/_16sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Promotion"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/promotion_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/secondary_text"
                android:textStyle="bold" />



        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/input_password"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:hint="@string/pasword_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputconfirmpassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:imeOptions="actionDone"
            android:hint="@string/confirmer_le_mot_de_passe"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/btn_signup"
                android:text="@string/enregistre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textAllCaps="false"
                android:background="@drawable/background_btn"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"

                />
            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:id="@+id/progressBar"
                />

        </FrameLayout>


        <TextView
            android:layout_gravity="center"
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/my_count"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />

    </LinearLayout>


</ScrollView>